<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:orientation="horizontal"
    android:background="@color/white"
    android:gravity="center_vertical">

    <FrameLayout
        android:id="@+id/fl_copy"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="50dp"
        >
        <!--                android:background="@drawable/button_bg_color_selector"-->
        <Button
            android:id="@+id/btn_copy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/fm_copyto"
            android:textAllCaps="false"
            android:drawableTop="@drawable/ic_fm_copy"
            android:textColor="@color/colorZT33"
            android:background="@drawable/button_bg_color_selector"
            android:paddingTop="5dp"
            android:gravity="center"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:layout_marginRight="10dp"
            android:background="@drawable/badge"
            android:gravity="center"
            android:minWidth="9dp"
            android:text="9"
            android:textColor="@color/dracula_capture"
            android:textSize="7sp"
            android:visibility="gone" />
    </FrameLayout>
    <Button
        android:id="@+id/btn_fm_oper_move"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:drawableTop="@drawable/ic_moveto"
        android:text="@string/fm_moveto"
        android:paddingTop="5dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="@color/colorZT33"
        android:background="@drawable/button_bg_color_selector"/>
    <Button
        android:id="@+id/btn_addpas"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:drawableTop="@drawable/ic_addpas"
        android:text="@string/fm_add_pass"
        android:paddingTop="5dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="@color/colorZT33"
        android:background="@drawable/button_bg_color_selector"/>
    <Button
        android:id="@+id/btn_del"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:drawableTop="@drawable/ic_fm_del"
        android:text="@string/fm_del"
        android:paddingTop="5dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="@color/colorZT33"
        android:background="@drawable/button_bg_color_selector"/>


    <Button
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:drawableTop="@mipmap/ic_share"
        android:text="@string/fm_share"
        android:paddingTop="5dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="@color/colorZT33"
        android:background="@drawable/button_bg_color_selector"/>



</LinearLayout>