<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_encryptlist">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:fitsSystemWindows="true"
        app:navigationIcon="@mipmap/ic_fm_back"
        app:title="@string/encrpty_list"
        app:titleTextColor="@color/colorZTNav" >

        <LinearLayout
            android:id="@+id/ll_topoper"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_gravity="right">
            <Button
                android:id="@+id/btn_allSelect"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_color_selector"
                android:text="@string/selectAll"
                android:layout_marginRight="0dp"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:layout_gravity="right"
                android:drawableLeft="@drawable/ic_wx_selectall_un"
                android:textColor="@color/dracula_capture"/>
            <Button
                android:id="@+id/btn_canceledit"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_color_selector"
                android:text="@string/fm_cancel"
                android:layout_marginLeft="0dp"
                android:textSize="14sp"
                android:layout_gravity="right"
                android:drawableLeft="@drawable/ic_wx_canceledit"
                android:textAllCaps="false"
                android:textColor="@color/dracula_capture"/>



        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        />

    <include layout="@layout/layout_filelist_oper_"
        android:id="@+id/ll_oper_bottom"
        android:visibility="gone"/>


</LinearLayout>