<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentFind"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="64dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:background="@color/mainColor">-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/find"-->
<!--            android:textSize="18sp"-->
<!--            android:textColor="@color/colorZTNav"-->
<!--            android:layout_marginLeft="15dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            />-->

<!--    </LinearLayout>-->



    <LinearLayout
        android:id="@+id/ll_check"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="263dp"
        android:layout_height="34dp"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="15dp"

        android:background="#2D6CFF"
        card_view:cardBackgroundColor="#2D6CFF"
        >
        <RadioGroup
            android:id="@+id/rg"
            android:layout_marginTop="1dp"
            android:layout_width="262dp"
            android:layout_height="32dp"
            android:background="#2D6CFF"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/home_tab"
                style="@style/Custom.SegRadioButton"
                android:button="@null"
                android:checked="true"
                android:layout_marginLeft="1dp"
                android:text="@string/find_tm"
                />
            <RadioButton
                android:id="@+id/find_tab"
                style="@style/Custom.SegRadioButton"
                android:button="@null"
                android:layout_marginLeft="1dp"
                android:text="@string/find_dy" />
            <RadioButton
                android:id="@+id/set_tab"
                style="@style/Custom.SegRadioButton"
                android:button="@null"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:text="@string/find_jd" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>
    </LinearLayout>

    <WebView
        android:id="@+id/web_find"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />



</LinearLayout>