<?xml version="1.0" encoding="utf-8"?>
  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context="com.sentaroh.android.upantool.Activity_Migration"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:fitsSystemWindows="true"
        app:title="@string/back"
        app:titleTextColor="@color/colorZTNav">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/migrate_phone_device"
        android:textColor="@color/colorZT33"
        android:layout_marginLeft="14dp"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_p_d"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="68dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/white"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:src="@mipmap/ic_moblie"
          />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_to"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:src="@mipmap/ic_dev"
            />
      </LinearLayout>


    </androidx.cardview.widget.CardView>

  <TextView
      android:layout_marginTop="16dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="14sp"
      android:text="@string/migrate_device_phone"
      android:textColor="@color/colorZT33"
      android:layout_marginLeft="14dp"/>
  <androidx.cardview.widget.CardView
      android:id="@+id/cv_d_p"
      android:layout_width="match_parent"
      android:layout_marginTop="8dp"
      android:layout_height="68dp"
      android:layout_marginLeft="14dp"
      android:layout_marginRight="14dp"
      app:cardCornerRadius="4dp"
      app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="25dp"
          android:src="@mipmap/ic_dev"
          />

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/ic_to"
          />

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="25dp"
          android:src="@mipmap/ic_moblie"
          />
    </LinearLayout>
  </androidx.cardview.widget.CardView>


  <TextView
      android:layout_marginTop="16dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="14sp"
      android:text="@string/migrate_delete"
      android:textColor="@color/colorZT33"
      android:layout_marginLeft="14dp"/>
  <androidx.cardview.widget.CardView
      android:id="@+id/cv_del"
      android:layout_width="match_parent"
      android:layout_marginTop="8dp"
      android:layout_height="68dp"
      android:layout_marginLeft="14dp"
      android:layout_marginRight="14dp"
      app:cardCornerRadius="4dp"
      app:cardBackgroundColor="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">


      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/ic_rmrecord"
          />


    </LinearLayout>
  </androidx.cardview.widget.CardView>

  </LinearLayout>